<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rad0_actuator</name>
  <version>0.0.1</version>
  <description>Real apliacion demostration. Actuator node</description>
  <maintainer email="javiermoreno@eprosima.com">Javier Moreno</maintainer>
  <license>Apache License 2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclc</build_depend>
  <build_depend>std_msgs</build_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

