<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>example_subscriber</name>
  <version>0.0.1</version>
  <description>Example of a subscriber</description>
  <maintainer email="borjaouterelo@eprosima.com">borjaouterelo</maintainer>
  <license>Apache License 2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclc</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>example_custom_msgs</build_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

