<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>micro_ros_demos_rcl</name>
  <version>0.0.2</version>
  <description>Examples using RCL API</description>
  <maintainer email="borjaouterelo@eprosima.com">Borja Outerelo</maintainer>
  <license>Apache License 2.0</license>
  <author>Borja Outerelo</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rcl</depend>
  <depend>rcl_action</depend>
  <depend>std_msgs</depend>
  <depend>example_interfaces</depend>

  <!-- configured_publisher and configured_subscriber-->
  <depend>geometry_msgs</depend>
  <depend>rmw_microxrcedds</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>