<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>micro_ros_demos_rcl</name>
  <version>0.0.1</version>
  <description>Example of a publisher using int32</description>
  <maintainer email="julianbermudez@eprosima.com">Julian Bermudez</maintainer>
  <license>Apache License 2.0</license>
  <author>Julian Bermudez</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rcl</depend>
  <depend>rcl_action</depend>
  <depend>std_msgs</depend>
  <depend>example_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>

