<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>micro_ros_demos_rclc</name>
  <version>1.0.0</version>
  <description>Examples using RCL+RCLC API</description>
  <maintainer email="pablogarrido@eprosima.com">Pablo Garrido</maintainer>
  <license>Apache-2.0</license>
  <author>Borja Outerelo</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rcl</depend>
  <depend>rclc</depend>
  <depend>rcl_action</depend>
  <depend>rcl_interfaces</depend>
  <depend>std_msgs</depend>
  <depend>example_interfaces</depend>
  <depend>complex_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>microxrcedds_client</depend>

  <!-- configured_publisher and configured_subscriber-->
  <depend>geometry_msgs</depend>
  <depend>rmw_microxrcedds</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>