<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>micro_ros_demos_rclcpp</name>
  <version>1.0.0</version>
  <description>micro-ROS examples using RCLCPP layer</description>
  <maintainer email="borjaouterelo@eprosima.com">Borja Outerelo</maintainer>
  <license>Apache-2.0</license>
  <author>Borja Outerelo</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>complex_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

