<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>string_publisher_cpp</name>
  <version>0.0.1</version>
  <description>Example of a string publisher</description>
  <maintainer email="borjaouterelo@eprosima.com">borjaouterelo</maintainer>
  <license>Apache License 2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

